@@ -985,9 +985,10 @@ PRETTY_URLS = ${PRETTY_URLS}
 # KATEX_AUTO_RENDER = """
 # delimiters: [
 #     {left: "$$", right: "$$", display: true},
-#     {left: "\\\[", right: "\\\]", display: true},
+#     {left: "\\\\[", right: "\\\\]", display: true},
+#     {left: "\\\\begin{equation*}", right: "\\\\end{equation*}", display: true},
 #     {left: "$", right: "$", display: false},
-#     {left: "\\\(", right: "\\\)", display: false}
+#     {left: "\\\\(", right: "\\\\)", display: false}
 # ]
 # """
 
