@@ -26,12 +26,13 @@ Features
 * Use ``PRETTY_URLS`` by default on all sites (Issue #1838)
 * Feed link generation is completely refactored (Issue #2844)
 * Let path handlers return absolute URLs (Issue #2876)
-* Add ``BLOG_EMAIL`` to global context to make it available for 
+* Add ``BLOG_EMAIL`` to global context to make it available for
   templates (Issue #2968)
 
 Bugfixes
 --------
 
+* Support KaTeX for reST display math (Issue #2888)
 * Use npm for asset management instead of bower, which was deprecated
   (Issue #2790)
 * Properly handle ``SHOW_INDEX_PAGE_NAVIGATION`` with Jinja templates
